syntax = "proto3";

package greeter;

service Greeter {
    rpc Register (UserRequest) returns (RegisterResponse);
    rpc Authenticate (UserRequest) returns (AuthResponse);
    rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
    rpc BackupData (BackupRequest) returns (BackupResponse);
    rpc CheckHeartbeat (Empty) returns (HeartbeatResponse);
    rpc RequestBackup (Empty) returns (BackupResponse);
}

message UserRequest {
    string username = 1;
    string password = 2;
}

message RegisterResponse {
    bool success = 1;
    string message = 2;
    string status = 3;
}

message AuthResponse {
    bool success = 1;
    string status = 2;
}

message DeleteUserRequest {
    string username = 1;
}

message DeleteUserResponse {
    bool success = 1;
    string message = 2;
}

message BackupRequest {
    string json_data = 1;
}

message BackupResponse {
    bool success = 1;
    string message = 2;
}

message HeartbeatResponse {
    bool alive = 1;
}

message Empty {}
